# fused-cross-entropy

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: run_benchmark.py
src/fused_cross_entropy/: __init__.py  fused_nll.py  optimizer.py
tests/: test_nll.py
