[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fused-cross-entropy"
version = "0.1.0"
description = "A Triton implementation of Fused Cross-Entropy loss."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "torch",
    "triton",
]

[project.urls]
Homepage = "https://github.com/klae01/fused-cross-entropy"

[project.optional-dependencies]
ci-ruff = ["ruff"]
ci-error = ["pytest"]
dev = [
    "fused-cross-entropy[ci-ruff, ci-error]",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
fixable = ["ALL"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
ci-error = ["pytest"]
ci-ruff = ["ruff"]
dev = [
    { include-group = "ci-error" },
    { include-group = "ci-ruff" },
    "pre-commit>=3.5.0",
]
